fixed issue with add shipping address content gettig collapsed when errors was updated, fixed by adding a conditional to see if the content should be closing or opening instead of using the condition to check the value of max height. Now when errors are being shown added max height value gets added and is the precise height needed to not waste animation time on extended values

--- a/src/Styles/checkout.scss
+++ b/src/Styles/checkout.scss
@@ -465,6 +465,11 @@
     row-gap: 20px;
   }
 
+  .checkout-shipping-info-name-wrapper {
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+  }
+
   .checkout-discount-code-wrapper {
     grid-template-columns: 1fr;
     row-gap: 20px;
